--- a/Statistics.ipynb
+++ b/Statistics.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load statistics.py\n",
+    "import math\n",
+    "\n",
     "def vector_add(v,w):\n",
     "    return [v_i + w_i for v_i, w_i in zip(v,w)]\n",
     "\n",
@@ -36,37 +38,103 @@
     "    return sum_of_squares(vector_subtract(v,w))\n",
     "\n",
     "def distance(v,w):\n",
-    "    return magnitude(vector_subtract(v,w))\n"
+    "    return magnitude(vector_subtract(v,w))\n",
+    "\n",
+    "\n",
+    "def mean(x):\n",
+    "    return sum(x) / len(x)\n",
+    "\n",
+    "def median(v):\n",
+    "    n = len(v)\n",
+    "    sorted_v = sorted(v)\n",
+    "    midpoint = n // 2\n",
+    "    \n",
+    "    if n % 2 == 1:\n",
+    "        return sorted_v[midpoint]\n",
+    "    else:\n",
+    "        return (sorted_v[midpoint-1] + sorted_v[midpoint])/2\n",
+    "    \n",
+    "def quantile(v, p):\n",
+    "    p_index = int(p * len(v))\n",
+    "    return sorted(v)[p_index]\n",
+    "\n",
+    "def mode(x):\n",
+    "    counts = Counter(x)\n",
+    "    max_count = max(counts.values())\n",
+    "    return [x_i for x_i, count in counts.items() if count == max_count]\n",
+    " \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = [1,2,3]\n",
-    "w = [5,6,7]"
+    "v = range(1,1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[6, 8, 10]"
+       "500"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_add(v,w)"
+    "median(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = [1,3,3,5,2,4,6,7]\n",
+    "mode(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = range(1,1000)\n",
+    "quantile(v, 0.5)"
    ]
   },
   {
